feat(Produto): implementação de "alteraProduto" e seus testes